fixed coloring of favorite icon in dark mode

--- a/src/app/components/custom-header/custom-header.component.scss
+++ b/src/app/components/custom-header/custom-header.component.scss
@@ -1,3 +1,6 @@
-.iconSize{
+.iconStyle{
     font-size: x-large;
-  }
+    color: secondary;
+    stroke: secondary;
+    fill: secondary;
+}
